yml - Updated footer, links. Clicking on link now opens in new tab. Lightbox extension expands images when you click on them. Adding an announcement to indicate this is separate from main TASO website.
contact - Updated with title banner in line with other pages.

data-vis/references - Updating broken website links.

Subtitles for each index page.

site index - Adding buttons to signpost to each page.

--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,25 @@ a:hover {
     color: white; /* This sets the text color within the highlight */
 }
 
+.parallax-container {
+  position: relative;
+}
+
+.parallax-image-container {
+  height: 400px;
+  background-attachment: fixed;
+  opacity: 1;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Parallax image data vis */
+.parallax-image-container.datavis {
+  background-image: url(images/data_vis_guide_image.png);
+}
+
+/* Parallax image coding */
+.parallax-image-container.coding {
+  background-image: url(images/coding_guidance_image.png);
+}
